--- a/app_base/templates/index.html
+++ b/app_base/templates/index.html
@@ -5,6 +5,9 @@
     <h2 class="text-uppercase">ສິນຄ້າ ຍອດນິຍົມ</h2>
   </div>
 </div>
+
+
+
 <!-- blog product -->
 {% for item in items %}
 <div class="container">
@@ -12,16 +15,21 @@
     <div class="col-sm-6 col-lg-4 text-center item mb-4">
       <!-- <span class="tag">Sale</span> -->
       <a href="#">
-        <img src="{{ image.url }}" alt="Image" width="270" height="370"
+        <img src="{{ item.img_item.url }}" alt="Image" width="270" height="370"
       /></a>
       <h3 class="text-dark"><a href="#">{{ item.name_item }}</a></h3>
-      <p class="price"><del>{{item.price_del}}</del> {{ item.price }}</p>
+      <p class="price text-danger"><del>{{ item.price_del_group }}</del> ກີບ</p>
+      <p class="price text-success">{{ item.price_group }} ກິບ</p>
     </div>
   </div>
 </div>
 {% endfor %}
 
 <!-- end blog -->
+
+
+
+
 <!-- page -->
 <div class="row mt-5">
   <div class="col-md-12 text-center">
