--- a/app_base/templates/index.html
+++ b/app_base/templates/index.html
@@ -30,20 +30,21 @@
 
 
 
-<!-- page -->
+<!-- page  number-->
+{% if items.paginator.num_page > 1  %}
 <div class="row mt-5">
   <div class="col-md-12 text-center">
     <div class="site-block-27">
       <ul>
         <li><a href="#">&lt;</a></li>
-        <li class="active"><span>1</span></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
+        {% for page_number in items.paginator.page_range %}
+        <li class="active" href="?page={{page_number}}"><span>{{ page_number }}</span></li>
+        {% endfor %}
         <li><a href="#">&gt;</a></li>
       </ul>
     </div>
   </div>
 </div>
+{% endif %}
+
 {% endblock %}
