--- a/app_base/templates/index.html
+++ b/app_base/templates/index.html
@@ -18,7 +18,9 @@
         <img src="{{ item.img_item.url }}" alt="Image" width="270" height="370"
       /></a>
       <h3 class="text-dark"><a href="#">{{ item.name_item }}</a></h3>
+      {% if item.price_del > 1 %}
       <p class="price text-danger"><del>{{ item.price_del_group }}</del> ກີບ</p>
+      {% endif %}
       <p class="price text-success">{{ item.price_group }} ກິບ</p>
     </div>
   </div>
