--- a/app_items/templates/components/base.html
+++ b/app_items/templates/components/base.html
@@ -38,6 +38,7 @@
   <script src="{% static 'js/owl.carousel.min.js' %}"></script>
   <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
   <script src="{% static 'js/aos.js' %}"></script>
+  <script src="{% static 'js/dropdown.js' %}"></script>
 
   <script src="{% static 'js/main.js' %}"></script>
 </body>
