--- a/app_items/templates/single_item.html
+++ b/app_items/templates/single_item.html
@@ -2,7 +2,12 @@
 {% load static %} 
 {% block content %}
 
-<h1>{{ item.name_item }}</h1>
+<div class="container">
+    <div class="title-section text-center col-12">
+      <h2 class="text-uppercase">ຕົວຢາ: {{ singleItem.name_item }}</h2>
+    </div>
+  </div>
+<h1></h1>
 
 
 
