--- a/app_items/templates/components/site_header.html
+++ b/app_items/templates/components/site_header.html
@@ -1,60 +1,38 @@
 {% load static %}
 <header class="site-header">
-  <div class="site-navbar py-2" style="background-color: #158000">
-    <div class="search-wrap">
-      <div class="container">
-        <a href="#" class="search-close js-search-close"
-          ><span class="icon-close2"></span
-        ></a>
-        <form action="#" method="post">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Search keyword and hit enter..."
-          />
-        </form>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="d-flex align-items-center justify-content-between">
-        <div class="logo">
-          <div class="site-logo">
-            <a href="/admin" class="js-logo-clone">SKPharma</a>
+  <!-- place navbar here -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="/admin">SK pharma</a>
+    <button class="navbar-toggler hidden-lg-up" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        aria-expanded="false" aria-label="Toggle navigation"></button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+      <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="#" aria-current="page">ໜ້າຫຼັກ <span class="visually-hidden"></span></a>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ໝວດໝູ</a>
+          <div class="dropdown-menu" aria-labelledby="dropdownId">
+            
+            {% for category in categories %}
+            <a class="dropdown-item" href="#">{{ category.category_item }}</a>
+            {% endfor %}
           </div>
-        </div>
-        <div class="main-nav d-none d-lg-block">
-          <nav
-            class="site-navigation text-right text-md-center"
-            role="navigation"
-          >
-            <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="active"><a href="#">ໜ້າຫຼັກ</a></li>
-              <li><a href="shop.html">ຮ້ານຄ້າ</a></li>
-              <li class="has-children">
-                <a href="#">ໝວດໝູ່</a>
-                <ul class="dropdown">
-                  {% for category in categories %}
-                  <li><a href="#">{{ category.category_item }}</a></li>
-                  {% endfor %}
-                </ul>
-              </li>
-              <li><a href="#">ການຕິຕໍ່</a></li>
-              <li><a href="#">ກ່ຽວກັບ</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div class="icons">
-          <a href="#" class="icons-btn d-inline-block js-search-open"
-            ><span class="icon-search"></span
-          ></a>
-          <a
-            href="#"
-            class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"
-            ><span class="icon-menu"></span
-          ></a>
-        </div>
-      </div>
+        </li>
+      </ul>
+      <form class="d-flex my-2 my-lg-0">
+        <input class="form-control me-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </div>
+</nav>
 </header>
+
+
+<!-- {% for category in categories %}
+<a href="#">{{ category.category_item }}</a>
+<a class="dropdown-item fs-5 fw-bold" href="#">ຢາປິ່ນປົວພະຍາດ</a>
+{% endfor %} -->
