add pagination djangle

--- a/app_items/templates/components/base.html
+++ b/app_items/templates/components/base.html
@@ -9,30 +9,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>site Title</title>
 
-  <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
-  <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+  {% include 'components/site_stylesheet.html' %}
 
 </head>
 
-<body class="site-wrap">
+<body>
   {% include 'components/site_header.html' %}
+
+
   {% block content %}{% endblock %}
-  {% include 'components/site_footer.html' %}
+
+  {% comment %} page_number in footer {% endcomment %}
+  {% include 'components/site_footer.html' %}  
+ 
+
+  {% include 'components/site_javascript.html' %}
 
 
-  <!-- <script src="{% static 'js/popper.js' %}"></script> -->
-  <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-  integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-  integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
 </body>
 
 </html>
