--- a/app_items/templates/components/site_footer.html
+++ b/app_items/templates/components/site_footer.html
@@ -51,7 +51,6 @@
 <!-- Footer -->
 <footer
   class="text-left text-lg-start text-black"
-  style="background-color: #158000ad"
 >
   <!-- Grid container -->
   <div class="container">
@@ -61,10 +60,8 @@
       <div class="row">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="uppercase mb-4 font-weight-bold">ບໍລິສັດເອັດເຄການຢາ</h6>
-          <h6 class="text-uppercase mb-4 font-weight-bold">
-            ຂາເຂົ້າຂາອອກຈຳກັດ
-          </h6>
+          <h6 class="mb-4 font-weight-bold">ບໍລິສັດເອັດເຄການຢາ</h6>
+          <p>ຂາເຂົ້າຂາອອກຈຳກັດ</p>
           <p>ບ້ານ ອີ່ໄລເໜືອ ເມືອງນາຊາຍທອງ</p>
           <p>ນະຄອນຫຼວງວຽງຈັນ</p>
         </div>
@@ -74,7 +71,7 @@
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">ລາຍການ ສິນຄ້າ</h6>
+          <h6 class="mb-4 font-weight-bold">ລາຍການ ສິນຄ້າ</h6>
           {% for category in categories%}
 
           <p>
@@ -91,7 +88,7 @@
 
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">ຕິດຕໍ່</h6>
+          <h6 class="mb-4 font-weight-bold">ຕິດຕໍ່</h6>
 
           <p>
             <a href="mailto:SKpharmacyimportxport@gmail.com"
@@ -106,11 +103,13 @@
             <a href="tel:+856 20 58 587 587">+856 20 58 587 587</a>
           </p>
         </div>
+          
+
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">ຕິດຕາມ</h6>
+          <h6 class="mb-4 font-weight-bold">ຕິດຕາມ</h6>
 
           <!-- Facebook -->
 
@@ -210,7 +209,7 @@
   <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+  <div class="text-center p-3" 
     © 2023 Copyright:
     <a class="text-black">SK Trand Import Export Sole Co., Ltd</a>
   </div>
