--- a/app_items/templates/components/site_stylesheet.html
+++ b/app_items/templates/components/site_stylesheet.html
@@ -2,9 +2,12 @@
 
 
 <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
-<link rel="stylesheet" href="{% static 'css/costom.css' %}">
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Lao+Looped&display=swap" rel="stylesheet">
 <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
 <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
