--- a/app_items/templates/components/site_header.html
+++ b/app_items/templates/components/site_header.html
@@ -1,9 +1,8 @@
 {% load static %}
 
-
 <nav class="navbar navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">SK pharma</a>
+    <a class="navbar-brand" href="/admin">SK pharma</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,13 +13,13 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div
-      class="offcanvas offcanvas-end text-bg-dark"
+      class="offcanvas offcanvas-end"
       tabindex="-1"
       id="offcanvasDarkNavbar"
       aria-labelledby="offcanvasDarkNavbarLabel"
     >
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+        <h5 class="offcanvas-title " id="offcanvasDarkNavbarLabel">
           SK pharma
         </h5>
         <button
@@ -66,10 +65,11 @@
 
 <!-- Search -->
 <div class="container">
- <div class="search" style="padding-top: 60px; padding-bottom: 60px;">
-  <form class="d-flex mt-3" role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-    <button class="btn btn-success" type="submit">Search</button>
+ <div class="search">
+  <form class="d-flex mt-3" role="search" action="{% url 'search' %}" method="POST">
+    {% csrf_token %} 
+    <input class="form-control me-2" type="text" name="name_item" placeholder="Search" aria-label="Search" />
+    <button class="btn btn-success" type="submit" name="submit" value="Search">Search</button>
   </form>
 </div> 
 </div>
