--- a/app_items/templates/product-search.html
+++ b/app_items/templates/product-search.html
@@ -7,26 +7,23 @@
 
 
 
-
-<p>is product search</p>
-
-    {{ result.name_item}}
+<h2>ຜົນການຄົ້ນຫາ ຂອງທ່ານ</h2>
   
 
   <!-- blog product -->
 <div class="container">
     <div class="row">
-        {% for result in results %}
+        {% for item in items %}
       <div class="col-sm-6 col-lg-4 text-center item mb-4">
         <!-- <span class="tag">Sale</span> -->
-        <a href="{% url 'single_item' result.id %}">
-          <img src="{{ result.img_item.url }}" alt="Image" width="270" height="370"
+        <a href="{% url 'single_item' item.id %}">
+          <img src="{{ item.img_item.url }}" alt="Image" width="270" height="370"
         /></a>
-        <h3 class="text-dark"><a href="#">{{ result.name_item }}</a></h3>
+        <h3 class="text-dark"><a href="#">{{ item.name_item }}</a></h3>
         {% if item.price_del > 1 %}
-        <p class="price text-danger"><del>{{ result.price_del_group }}</del> ກີບ</p>
+        <p class="price text-danger"><del>{{ item.price_del_group }}</del> ກີບ</p>
         {% endif %}
-        <p class="price text-success">{{ result.price_group }} ກິບ</p>
+        <p class="price text-success">{{ item.price_group }} ກິບ</p>
       </div>
       {% endfor %}
     </div>
@@ -39,3 +36,6 @@
 
 
 {% endblock %}
+
+
+
